# learnavi-linear-regression-with-python

./: .gitignore  .pre-commit-config.yaml  COURSE_INFO.md  LICENSE.md  README.md  pyproject.toml
assets/: HML001EN.drawio
notebooks/: S1_Welcome.ipynb  S2_Introduction_to_Linear_regression.ipynb  S3_Building_Linear_regression_model.ipynb  S4_Linear_regression_with_real-world_dataset.ipynb  S5_Summary.ipynb
