[tool.poetry]
name = "learnavi-linear-regression-with-python"
version = "0.1.0"
description = ""
authors = ["Learnavi.online <contact@soleildatadojo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.0,<3.11"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
jupyterlab = "^3.1.18"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.9b0"
pre-commit = "^2.15.0"
jupyterlab-lsp = "^3.8.1"
python-lsp-server = "^1.2.3"
jupyterlab-widgets = "^1.0.2"
jupyterlab-code-formatter = "^1.4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
length_sort = true

[tool.black]
line-length = 90
target-version = ["py38"]
